# Metal_Mnemonic_Recovery

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  Makefile  README.md  RELEASE_CHECKLIST.md  RESPONSIBLE_USE.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  VALIDATION.md
.github/workflows/: build.yml
examples/bench/: templates-1x-12missing.txt  templates-1x-5missing.txt  templates-1x-6missing.txt  templates-1x-8missing.txt  templates-64x-1missing.txt  templates-64x-exact.txt
examples/validation/: templates-prefix-12missing.txt  templates-prefix-1missing.txt  templates-prefix-3missing.txt  templates-prefix-5missing.txt  templates-prefix-6missing.txt  templates-prefix-8missing.txt
include/app/: recovery_app.h
include/metal/: RecoveryCryptoCommon.h  RecoveryDerivationHelpers.h  RecoveryDerivationTypes.h  RecoveryDeviceSupport.h  RecoveryEvalEd25519.h  RecoveryEvalSecp.h  RecoveryMetalTypes.h  RecoverySecpDerivationCompat.h
include/recovery/: RecoveryWordlistsEmbedded.h  derivation_program.h  filter.h  found_record_formatter.h  secp_precompute_build.h  secp_precompute_load.h
include/support/: intrin_local.h  uint128_t.h  xor_filter.h
scripts/: benchmark_matrix_macos.sh  benchmark_signoff_macos.sh  benchmark_smoke_macos.sh  build_purity_common.sh  generate_filter_fixtures.py  runtime_safety_smoke_macos.sh  validate_release.sh  validate_release_macos.sh
src/app/: recovery_cli.cpp
src/crypto/: HashFunc.inc  MnemonicFunc.inc  filter.cpp
src/macos/: recovery_macos.mm
src/metal/: ChecksumKernels.metal  RecoveryEvalEd25519.metal  RecoveryEvalSecp.metal
src/recovery/: derivation_program.cpp  found_record_formatter.cpp  secp_precompute_build.cpp  secp_precompute_load.cpp
tests/: build_purity_macos.sh  build_purity_unified_macos.sh  derivation_program.cpp  found_record_formatter.cpp  metal_abi_layout.cpp  no_fallback_macos.sh  secp_precompute.cpp  unified_missing_acceptance_macos.sh
tools/: generate_secp_precompute_blob.cpp
